--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/file-saver": "^2.0.7",
+    "bcryptjs": "^3.0.2",
     "file-saver": "^2.0.5",
     "googleapis": "^156.0.0",
     "gsap": "^3.12.4",
