--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,5 @@ logs
 
 # Google API credentials
 google-sheets-credentials.json
-
+chaos-control-team-fa505d99119b.json
+chaos-control-team-4e44b05f3544.json
