--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "@supabase/supabase-js": "^2.55.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/file-saver": "^2.0.7",
     "bcryptjs": "^3.0.2",
