--- a/vercel.json
+++ b/vercel.json
@@ -63,12 +63,12 @@
       "destination": "/manifest.json"
     },
     {
-      "source": "/_nuxt/(.*)",
-      "destination": "/_nuxt/$1"
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     },
     {
       "source": "/(.*)",
-      "destination": "/index.html"
+      "destination": "/"
     }
   ]
 }
