--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
 {
-  "buildCommand": "npm run generate",
+  "buildCommand": "npm run build",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "outputDirectory": ".output",
+  "functions": {
+    "server/api/**/*.ts": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "rewrites": [
     {
       "source": "/api/(.*)",
