--- a/.vercelignore
+++ b/.vercelignore
@@ -1,22 +1,27 @@
 # Dependencies
-node_modules/
+node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build outputs
-.nuxt/
-.output/
-dist/
+# Development files
+.nuxt
+.output
+.nitro
+.cache
+.temp
+.tmp
 
 # Environment files
 .env
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # IDE files
-.vscode/
-.idea/
+.vscode
+.idea
 *.swp
 *.swo
 
@@ -25,32 +30,18 @@ dist/
 Thumbs.db
 
 # Logs
-logs/
+logs
 *.log
 
 # Runtime data
-pids/
+pids
 *.pid
 *.seed
 *.pid.lock
 
 # Coverage directory used by tools like istanbul
-coverage/
+coverage
 
-# Temporary folders
-tmp/
-temp/
-
-# Git
-.git/
-.gitignore
-
-# Documentation
-*.md
-!README.md
-
-# Test files
-test/
-tests/
-*.test.js
-*.spec.js
+# Build artifacts
+dist
+build
