--- a/env.example
+++ b/env.example
@@ -3,8 +3,7 @@ SUPABASE_URL=your_supabase_project_url
 SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_KEY=your_supabase_service_role_key
 
-# Google Cloud Configuration
-GOOGLE_CLOUD_VISION_API_KEY=your_google_cloud_vision_api_key
+# Google Sheets Configuration
 GOOGLE_SHEETS_CREDENTIALS_PATH=path_to_your_google_credentials.json
 
 # Database Configuration (if using Prisma)
