--- a/env.example
+++ b/env.example
@@ -1,10 +1,5 @@
-# Supabase Configuration
-SUPABASE_URL=your_supabase_project_url
-SUPABASE_ANON_KEY=your_supabase_anon_key
-SUPABASE_KEY=your_supabase_service_role_key
+# ChatGPT API Configuration
+CHATGPT_API=your_chatgpt_api_key
 
 # Google Sheets Configuration
 GOOGLE_SHEETS_CREDENTIALS_PATH=path_to_your_google_credentials.json
-
-# Database Configuration (if using Prisma)
-DATABASE_URL=your_database_connection_string
