--- a/env.example
+++ b/env.example
@@ -2,4 +2,4 @@
 CHATGPT_API=your_chatgpt_api_key
 
 # Google Sheets Configuration
-GOOGLE_SHEETS_CREDENTIALS_PATH=path_to_your_google_credentials.json
+GOOGLE_SHEETS_CREDENTIALS=your_google_sheets_credentials_json_content
