--- a/env.example
+++ b/env.example
@@ -2,4 +2,4 @@
 CHATGPT_API=your_chatgpt_api_key
 
 # Google Sheets Configuration
-GOOGLE_SHEETS_CREDENTIALS=your_google_sheets_credentials_json_content
+GOOGLE_SHEETS_CREDENTIALS=chaos-control-team-2d67cc3c1469.json
