--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@types/file-saver": "^2.0.7",
+    "@vercel/analytics": "^1.5.0",
     "file-saver": "^2.0.5",
     "googleapis": "^156.0.0",
     "gsap": "^3.12.4",
